# desktop/src/open-api/model/setGroupCategoriesRequest.ts
@@ -1,0 +1,15 @@
+/**
+ * Receipt Wrangler API.
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface SetGroupCategoriesRequest { 
+    categoryIds?: Array<number>;
+}
+
